@@ -153,16 +153,17 @@ DOM should be a parse tree as generated by
     (shr-remove-trailing-whitespace start (point))))
 
 (defun shr-remove-trailing-whitespace (start end)
-  (save-restriction
-    (narrow-to-region start end)
-    (delete-trailing-whitespace)
-    (goto-char start)
-    (while (not (eobp))
-      (end-of-line)
-      (dolist (overlay (overlays-at (point)))
-	(when (overlay-get overlay 'before-string)
-	  (overlay-put overlay 'before-string nil)))
-      (forward-line 1))))
+  (let ((width (window-width)))
+    (save-restriction
+      (narrow-to-region start end)
+      (goto-char start)
+      (while (not (eobp))
+	(end-of-line)
+	(when (> (current-column) width)
+	  (dolist (overlay (overlays-at (point)))
+	    (when (overlay-get overlay 'before-string)
+	      (overlay-put overlay 'before-string nil))))
+	(forward-line 1)))))
 
 (defun shr-copy-url ()
   "Copy the URL under point to the kill ring.
